# astronomy

./: .gitignore  .travis.yml  CMakeLists.txt  azure-pipelines.yml
doc/tutorials/coordinate/: astronomical_coordinate_operation.md  coordinate_point.md  euclidean_coordinate.md  motion.md
include/boost/astronomy/coordinate/: alt_az.hpp  arithmetic.hpp  base_differential.hpp  base_ecliptic_frame.hpp  base_equatorial_frame.hpp  base_frame.hpp  cartesian_differential.hpp  cartesian_representation.hpp  cirs.hpp  coordinate.hpp  differential.hpp  frame.hpp  galactic.hpp  geocentric.hpp  heliocentric.hpp  icrs.hpp  io.hpp  representation.hpp  sky_point.hpp  spherical_coslat_differential.hpp  spherical_differential.hpp  spherical_equatorial_differential.hpp  spherical_equatorial_representation.hpp  spherical_representation.hpp  supergalactic.hpp
test/: CMakeLists.txt  Jamfile
test/coordinate/: CMakeLists.txt  Jamfile  cartesian_differential.cpp  cartesian_representation.cpp  ecliptic_coord.cpp  equatorial_ha_coord.cpp  equatorial_ra_coord.cpp  galactic_coord.cpp  horizon_coord.cpp  spherical_differential.cpp  spherical_equatorial_differential.cpp  spherical_equatorial_representation.cpp  spherical_representation.cpp  utility.cpp
test/header/: main.cpp
test/io/: CMakeLists.txt  Jamfile  base_fixture.hpp  t_ascii_table.cpp  t_binary_table.cpp  t_card.cpp  t_card_policy.cpp  t_data_conversions.cpp  t_fits.cpp  t_fits_reader.cpp  t_hdu.cpp  t_header.cpp  t_primary_hdu.cpp  t_stream_reader.cpp  t_string_conversions.cpp
test/io/fits_sample_files/: test_random_file.txt
test/time/: CMakeLists.txt  Jamfile  time_conversions.cpp
test/units/: length.cpp
(+58 files in other folders)
